@@ -31,6 +31,7 @@
     <script src="/test/overlays.js"></script>
     <script src="/test/controls.js"></script>
     <script src="/test/viewport.js"></script>
+    <script src="/test/world.js"></script>
     <!-- The navigator tests are the slowest (for now; hopefully they can be sped up)
     so we put them last. -->
     <script src="/test/navigator.js"></script>
